# cmake-c-asan-tsan

./: .clang-format  CMakeLists.txt  README.md
src/: main.c
